# Yella

./: .gitignore  CMakeLists.txt  Configure.cmake  agent.h  export.h  main.c  router.c  router.h  runtime_link.h  yella_uuid.h
agent/: CMakeLists.txt  agent.c  agent.h  boot_state.c  boot_state.h  envelope.c  envelope.h  heartbeat.c  heartbeat.h  kafka.c  kafka.h  mac_addresses.c  mac_addresses.h  main.c  message_header.c  message_header.h  msg_part.h  router.c  router.h  runtime_link.h  saved_state.c  saved_state.h  signal_handler.h  spool.c  spool.h  yella_uuid.h
agent/agent/: CMakeLists.txt  agent.c  argparse.h  mac_addresses.c  mac_addresses.h  main.c  router.c  saved_state.c  saved_state.h  spool.c
agent/agent/platform/macintosh/: mac_addresses_macintosh.c
agent/agent/platform/posix/: heartbeat_posix.c  signal_handler_posix.c
agent/agent/serialization/private/: saved_state.fbs
agent/agent/serialization/public/: heartbeat.fbs
agent/common/: CMakeLists.txt  compression.c  compression.h  file.c  file.h  message_part.h  parcel.c  parcel.h  process.h  ptr_vector.c  ptr_vector.h  settings.c  settings.h  text_util.c  text_util.h  uds.h  uds_util.c  yaml_util.c  yaml_util.h
agent/common/platform/posix/: file_posix.c  text_util_posix.c  thread_posix.c
agent/common/serialization/public/: parcel.fbs  parcel_generated.h
agent/platform/freebsd/: mac_addresses_freebsd.c
agent/platform/linux/: mac_addresses_linux.c
agent/platform/macintosh/: mac_addresses_macintosh.c
agent/platform/posix/: heartbeat_posix.c  runtime_link_posix.c  signal_handler_posix.c  yella_uuid_posix.c
agent/plugin/: CMakeLists.txt  plugin.c  plugin.h
agent/plugin/file/: CMakeLists.txt  accumulator.c  attribute.c  attribute.h  collect_attributes.c  collect_attributes.h  element.h  event_source.c  file_name_matcher.h  file_plugin.c  job.c  job.h  job_queue.c  job_queue.h  posix_acl.h  posix_permissions.h  stat_collector.h  state_db.c  state_db_pool.c  state_db_pool.h  user_group.h
agent/plugin/file/platform/fswatch/: event_source_fswatch.c
agent/plugin/file/platform/posix/: posix_acl.c  (+3 more)
agent/plugin/serialization/public/: plugin.fbs
agent/serialization/private/: boot_state.fbs  boot_state_builder.h  boot_state_reader.h  saved_state.fbs
agent/serialization/public/: envelope.fbs  header.fbs  heartbeat.fbs
agent/test/: CMakeLists.txt
agent/test/agent/: heartbeat_test.c  router_test.c  saved_state_test.c  test-agent.yaml.in
agent/test/common/: file_test.c  parcel_test.c  settings_test.c
agent/test/fake-agent/: CMakeLists.txt  agent.cpp  agent.hpp  expected_exception.cpp  expected_exception.hpp  file_test_impl.cpp  file_test_impl.hpp  main.cpp  parcel.cpp  parcel.hpp  plugin.cpp  plugin.hpp  plugin_message_receiver.hpp  test.cpp  test.hpp  test_impl.cpp  test_impl.hpp
agent/test/fake-agent/tests/: file-chucho.yaml  file-test.yaml
agent/test/plugin/file/: attribute_test.c  collect_attributes_test.c  element_test.c  file_name_matcher_test.c  job_queue_test.c  job_test.c
common/: .settings.c.swp  .thread.h.swp  CMakeLists.txt  calendar.h  compression.c  compression.h  envelope.c  envelope.h  file.c  file.h  log.c  log.h  macro_util.h  message_header.c  message_header.h  parcel.c  process.h  ptr_deque.c  ptr_deque.h  ptr_helper.c  ptr_helper.h  ptr_list.c  ptr_list.h  ptr_vector.c  ptr_vector.h  return_code.c  return_code.h  sds.h  sds_util.c  sds_util.h  settings.c  settings.h  text_util.c  text_util.h  thread.h  time_util.h  uds.c  uds.h  uds_util.c  uds_util.h
common/platform/posix/: calendar_posix.c  file_posix.c  process_posix.c  settings_posix.c  text_util_posix.c  thread_posix.c  time_util_posix.c
common/serialization/public/: envelope.fbs  header.fbs  message_header.fbs
console/: CMakeLists.txt  agent.cpp  agent.hpp  configuration.cpp  configuration.hpp  console.cpp  console.hpp  database.cpp  database.hpp  fatal_error.hpp  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  message_queue.cpp  message_queue.hpp  model.cpp  model.hpp  parcel.cpp  parcel.hpp  postgres_db.cpp  postgres_db.hpp  rabbitmq.cpp  rabbitmq.hpp
console/sql/: postgres.sql
plugin/file/: CMakeLists.txt  accumulator.c  accumulator.h  attribute.c  attribute.h  collect_attributes.c  collect_attributes.h  element.c  element.h  event_source.c  event_source.h  file_name_matcher.c  file_name_matcher.h  file_plugin.c  job.c  job.h  job_queue.c  job_queue.h  state_db.c  state_db.h  state_db_pool.c  state_db_pool.h
plugin/file/platform/freebsd/: event_source.d  event_source_freebsd.c
plugin/file/platform/fswatch/: event_source_fswatch.c
plugin/file/serialization/private/: db_attrs.fbs  file_config.fbs
plugin/file/serialization/public/: file.fbs
plugin/hello/: CMakeLists.txt  hello.c
plugin/hello/serialization/public/: hello.fbs
router/: CMakeLists.txt  agent_face.cpp  agent_face.hpp  bucket_brigade.cpp  bucket_brigade.hpp  configuration.cpp  configuration.hpp  face.hpp  fatal_error.hpp  main.cpp  mq_face.cpp  mq_face.hpp  rabbit_mq_face.cpp  rabbit_mq_face.hpp  zeromq_agent_face.cpp  zeromq_agent_face.hpp
test/: CMakeLists.txt  fake_router.c
test/agent/: CMakeLists.txt  envelope_test.c  heartbeat_test.c  kafka_test.c  mac_addresses_test.c  router_test.c  saved_state_test.c  spool_test.c  test-agent.yaml.in
test/common/: CMakeLists.txt  compression_test.c  envelope_test.c  file_test.c  message_header_test.c  parcel_test.c  process_test.c  ptr_list_test.c  ptr_vector_test.c  settings_test.c
test/fake-router/: CMakeLists.txt  fake_router.c  router.yaml.in
test/fake_router/: CMakeLists.txt  fake_router.c  fake_router.h  main.c  spool_test.c  spool_test.h
test/plugin/: CMakeLists.txt  plugin_test.c
test/plugin/file/: CMakeLists.txt  accumulator_test.c  attribute_test.c  collect_attributes_test.c  event_source_test.c  file_name_matcher_test.c  job_queue_test.c  job_test.c  state_db_pool_test.c  state_db_test.c
test/serialization/: spool_test.fbs  spool_test_result.fbs
test/test_common/: CMakeLists.txt  spool_test.c  spool_test.h  spool_test_result.c  spool_test_result.h
(+11 files in other folders)
